<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_final">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unidad"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cal" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/resul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="40dp"/>

        <TableLayout
            android:layout_width="714dp"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/uno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1" />

                <Button
                    android:id="@+id/dos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2" />

                <Button
                    android:id="@+id/tres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3" />

                <Button
                    android:id="@+id/borra"
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:text="C" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/cuatro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4" />

                <Button
                    android:id="@+id/cinco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5" />

                <Button
                    android:id="@+id/seis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Realiz." />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/siete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7" />

                <Button
                    android:id="@+id/ocho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8" />

                <Button
                    android:id="@+id/nueve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9" />

                <Button
                    android:id="@+id/button17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="." />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/cero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />

                <Button
                    android:id="@+id/button20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>